--- a/YazarWebsite/Views/Shared/_WriterLayout.cshtml
+++ b/YazarWebsite/Views/Shared/_WriterLayout.cshtml
@@ -58,7 +58,7 @@ to get the desired effect
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item has-treeview">
-                            <a href="/AdminCategory/Index/" class="nav-link">
+                            <a href="/WriterPanel/WriterProfile/" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
                                     Profilim
