--- a/YazarWebsite/Views/WriterPanelContent/ToDoList.cshtml
+++ b/YazarWebsite/Views/WriterPanelContent/ToDoList.cshtml
@@ -4,9 +4,9 @@
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
-<p>#1 Profilim Sayfası</p>
+<p>#1 Profilim Sayfası --> Tamamlandı</p>
 <p>#2 Tüm Başlıklarda Paging --> Tamamlandı</p>
-<p>#3 Mesajlarda Session</p>
+<p>#3 Mesajlarda Session --> Tamamlandı</p>
 <p>#4 Oturum Yönetiminin Mimariye Taşınması</p>
 <p>#5 Token Kullanımı</p>
 
