--- a/YazarWebsite/Views/Home/HomePage.cshtml
+++ b/YazarWebsite/Views/Home/HomePage.cshtml
@@ -74,9 +74,9 @@
                         <a href="/Default/Headings/">Sözlük</a>
                     </li>
                     <li class="login">
-                        <a href="/Login/WriterLogin/">Giriş Yap</a>
+                        @*<a href="/Login/WriterLogin/">Giriş Yap</a>*@
                         <button type="button" class="btn login-btn text-uppercase" data-toggle="modal" data-target="/Login/WriterLogin/">
-                                Giriş Yap
+                            <a href="/Login/WriterLogin/">Giriş Yap</a>
                             </button>
                     </li>
                 </ul>
@@ -628,7 +628,7 @@
                 </div>
             </div>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.03971124294!2d28.988056226953113!3d41.06812459999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab6fc4a46fc63%3A0x9ce9fcc6cd43250!2sTrump%20Towers!5e0!3m2!1str!2str!4v1663931932104!5m2!1str!2str" width="1200" height="450" style="border:0;margin-left:50px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe align="middle" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.03971124294!2d28.988056226953113!3d41.06812459999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab6fc4a46fc63%3A0x9ce9fcc6cd43250!2sTrump%20Towers!5e0!3m2!1str!2str!4v1663931932104!5m2!1str!2str" width="1200" height="450" style="border:0;margin-left:50px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
